# phoenix_trader

./: .gitignore  .gitmodules  Dockerfile  docker-compose.yml  docker-compose.yml.bak  docker-compose.yml.bak2  docker-compose.yml.bak_depends  docker-compose.yml.bak_final  docker-compose.yml.bak_final2  docker-compose.yml.bak_indent  docker-compose.yml.bak_prewarm  docker-compose.yml.bak_selfheal_dupe  pyproject.toml  run.sh
self_heal/: Dockerfile  orchestrator.py
src/: phoenix_core.py
src/phoenix_trader/: __init__.py
src/phoenix_trader/autofix/: agent.py  test_from_trace.py
src/phoenix_trader/boot/: alias.py
src/phoenix_trader/infra/: broker.py
src/phoenix_trader/mail/: report.py
src/phoenix_trader/ml/: online.py
src/phoenix_trader/scheduler/: jobs.py
src/phoenix_trader/strategies/: __init__.py  momo.py
src/phoenix_trader/supervisor/: core.py
tests/: manual_break.py  smoke.py
